crates/clan/clan-core/tests/clan_golden/snapshots/clan_golden__complexity_mor_gra@rust.snap
---
source: crates/talkbank-clan/tests/clan_golden/rust_only.rs
expression: output.rust_output
---
Speaker: CHI
  Relation     Count   
  -----------  --------
  CSUBJ        0       
  CCOMP        0       
  XCOMP        0       
  ACL          0       
  ADVCL        0       
  APPOS        0       
  EXPL         0       
  Tokens       0       
  TotalTokens  5       
  Ratio        0.000000

Speaker: MOT
  Relation     Count   
  -----------  --------
  CSUBJ        0       
  CCOMP        0       
  XCOMP        0       
  ACL          0       
  ADVCL        0       
  APPOS        0       
  EXPL         0       
  Tokens       0       
  TotalTokens  4       
  Ratio        0.000000
