crates/clan/clan-core/tests/clan_golden/snapshots/clan_golden__complexity_mor_gra_json@rust.snap
---
source: crates/talkbank-clan/tests/clan_golden/rust_only.rs
expression: output.rust_output
---
{
  "speakers": [
    {
      "speaker": "CHI",
      "csubj": 0,
      "ccomp": 0,
      "xcomp": 0,
      "acl": 0,
      "advcl": 0,
      "appos": 0,
      "expl": 0,
      "comp": 0,
      "cpred": 0,
      "cpobj": 0,
      "cobj": 0,
      "cjct": 0,
      "xjct": 0,
      "njct": 0,
      "cmod": 0,
      "xmod": 0,
      "tokens": 0,
      "total_tokens": 5
    },
    {
      "speaker": "MOT",
      "csubj": 0,
      "ccomp": 0,
      "xcomp": 0,
      "acl": 0,
      "advcl": 0,
      "appos": 0,
      "expl": 0,
      "comp": 0,
      "cpred": 0,
      "cpobj": 0,
      "cobj": 0,
      "cjct": 0,
      "xjct": 0,
      "njct": 0,
      "cmod": 0,
      "xmod": 0,
      "tokens": 0,
      "total_tokens": 4
    }
  ],
  "style": "Ud"
}
