crates/clan/clan-core/tests/clan_golden/snapshots/clan_golden__corelex_threshold_1@rust.snap
---
source: crates/talkbank-clan/tests/clan_golden/rust_only.rs
assertion_line: 175
expression: rust_output
---
Core Vocabulary (frequency >= 1):
  8 core / 8 total = 100.0%

Core words:
     1  cookies
     1  get
     1  i
     1  it's
     1  mommy
     1  them
     1  want
     1  will
