crates/clan/clan-core/tests/clan_golden/snapshots/clan_golden__mortable_mor_gra@rust.snap
---
source: crates/talkbank-clan/tests/clan_golden/rust_only.rs
assertion_line: 38
expression: rust_output
---
Speaker: CHI
  Total  Nouns  Verbs  Pronouns  Other
  -----  -----  -----  --------  -----
  4      1      1      2         0    

Speaker: MOT
  Total  Nouns  Verbs  Pronouns  Other
  -----  -----  -----  --------  -----
  4      1      2      1         0
