crates/clan/clan-core/tests/clan_golden/snapshots/clan_golden__rely_coding@rust.snap
---
source: crates/talkbank-clan/tests/clan_golden/rust_only.rs
assertion_line: 93
expression: rust_output
---
Code Agreement
  Overall Agreement: 75.0%
  Cohen's Kappa: 0.6667
  Code  File 1  File 2  Agreed  Agreement
  ----  ------  ------  ------  ---------
  $ADJ  1       0       0       0.0%     
  $ADV  1       1       1       100.0%   
  $NOM  1       1       1       100.0%   
  $VRB  1       2       1       50.0%
