crates/clan/clan-core/tests/clan_golden/snapshots/clan_golden__wdsize_mor_gra@rust.snap
---
source: crates/talkbank-clan/tests/clan_golden/rust_only.rs
assertion_line: 187
expression: rust_output
---
Speaker: CHI
  Total words: 5
  Mean word size: 3.000
  Length  Count
  ------  -----
  1       1    
  2       2    
  4       1    
  6       1    

Speaker: MOT
  Total words: 4
  Mean word size: 4.000
  Length  Count
  ------  -----
  3       1    
  4       2    
  5       1
